--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack-dev-server --host 0.0.0.0 --port 8042"
   },
   "devDependencies": {
+    "chai-bn": "^0.2.1",
     "copy-webpack-plugin": "^5.0.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
