--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack-dev-server --host 0.0.0.0 --port 8042"
   },
   "devDependencies": {
+    "@types/pouchdb-browser": "^6.1.3",
     "chai-bn": "^0.2.1",
     "copy-webpack-plugin": "^5.0.5",
     "webpack": "^4.41.2",
@@ -17,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "pouchdb-browser": "^7.2.2",
     "web3": "^1.2.4"
   }
 }
